# backend

./: .cursorignore  .gitignore  API_README.md  EXTERNAL_ACCESS_CHECKLIST.md  README.md  auth-test.json  build-and-deploy.sh  build.gradle.kts  cursor-setup.md  dev.sh  external_access_test.py  test-all-services.sh  test-auth-api-8083.ps1  test-auth-api.ps1  test-auth-curl.sh
.cursor/: settings.json
backend/: .gitignore  build.gradle.kts  settings.gradle.kts
docs/: api-endpoints-guide.md  auth-service-api.md  category-service-api.md  category-service-setup-guide.md  category-service-troubleshooting.md  comment-service-api.md  grafana-setup-guide.md  istio-auth-api-guide.md  istio-k8s-auth-guide.md  post-service-api.md  skaffold-setup-guide.md  user-profile-api-guide.md  websocket-service-api.md
k8s/: apply-istio.sh  deploy-all.bat  test-istio.sh  unified-gateway.yaml
k8s/auth-db/: configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
k8s/auth-mariadb/: deployment.yaml
k8s/auth-service/: auth-service.yaml  configmap.yaml  deployment.yaml  rbac.yaml  service.yaml
k8s/category-db/: configmap-init.yaml  deployment.yaml  init-schema.sql  mongodb-init.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  service.yaml  statefulset.yaml
k8s/category-service/: deployment.yaml  hpa.yaml  ingress.yaml  istio.yaml  networkpolicy.yaml  pdb.yaml  rbac.yaml  service.yaml
k8s/comment-db/: deployment.yaml  pvc.yaml  service.yaml
k8s/comment-service/: deployment.yaml  service.yaml
k8s/istio/: authentication.yaml  envoy-filter.yaml  (+1 more)
proto/: category.proto
scripts/: create-secrets.sh
server/: Dockerfile  QUICK_START.md  README_LOCAL.md  TESTING_PLAN.md  api-test.http  build.gradle.kts  env.example  start.sh
services/comment/: Cargo.toml  Dockerfile
services/comment/src/: config.rs  db.rs  handlers.rs  models.rs
services/websocket/: Cargo.toml  Dockerfile  deploy.sh
services/websocket/src/: config.rs  db.rs  http.rs  main.rs
services/websocket/systemd/: websocket.service
services/websocket/tests/: test_message_validation.rs  test_websocket_integration.rs
websocket/: README.md  docker-compose.yml
(+298 files in other folders)
