[package]
name = "comment-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# MongoDB Driver
mongodb = "2.8.1"
futures = "0.3"

# For configuration management
config = "0.13"

# For logging
env_logger = "0.10"
log = "0.4"

# For error handling
anyhow = "1.0"
thiserror = "1.0"

# For time handling
chrono = { version = "0.4", features = ["serde"] }

# For UUID generation
uuid = { version = "1.0", features = ["serde", "v4"] }
